--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/greetlogo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -16,15 +16,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ContactActivity" android:noHistory="true"></activity>
-        <activity android:name=".SignUpActivity" android:noHistory="true"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".ContactActivity">
+            <intent-filter>
+                <action android:name="CONTACT_REQUEST" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="text/greet.user" />
             </intent-filter>
         </activity>
+        <activity android:name=".SignUpActivity" android:noHistory="true"></activity>
+        <activity android:name=".MainActivity"></activity>
         <service android:name=".MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
