--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 26
     defaultConfig {
         applicationId "com.jzap.setlist.nfc"
         minSdkVersion 23
@@ -32,6 +32,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:12.0.1'
     implementation 'com.android.support:recyclerview-v7:24.2.1'
     implementation 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.github.bumptech.glide:glide:4.1.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.1.1'
+    compile 'com.firebaseui:firebase-ui-auth:3.3.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
