--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
         <activity android:name=".SignUpActivity" android:noHistory="true"></activity>
         <activity android:name=".MainActivity"></activity>
+        <activity android:name=".SettingsActivity"></activity>
         <service android:name=".MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
