--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:12.0.1'
     compile 'com.google.firebase:firebase-messaging:12.0.1'
     compile 'com.google.firebase:firebase-database:12.0.1'
+    compile 'com.google.firebase:firebase-storage:12.0.1'
     compile 'com.google.android.gms:play-services-auth:12.0.1'
     implementation 'com.android.support:recyclerview-v7:24.2.1'
     implementation 'com.android.support:cardview-v7:24.2.1'
